--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://github.com/duncanshih/duncanshih.github.io.git'
+baseURL = 'https://duncanshih.github.io/'
 languageCode = 'en-us'
 title = 'Yurong Musk'
 theme = "LoveIt-master"
