--- a/config.toml
+++ b/config.toml
@@ -133,7 +133,7 @@ enableEmoji = true
           # URL of avatar shown in home page
           avatarURL = "/images/avatar.png"
           # title shown in home page (HTML format is supported)
-          title = ""
+          title = "Duncan Shih"
           # subtitle shown in home page
           subtitle = "It's a blog about some interesting ideas."
           # whether to use typeit animation for subtitle
@@ -333,7 +333,7 @@ enableEmoji = true
           # 主页显示头像的 URL
           avatarURL = "/images/avatar.jpg"
           # 主页显示的网站标题 (支持 HTML 格式)
-          title = ""
+          title = "Duncan Shih"
           # 主页显示的网站副标题
           subtitle = "It's a blog about some interesting ideas."
           # 是否为副标题显示打字机动画
@@ -531,7 +531,7 @@ enableEmoji = true
           # 主页显示头像的 URL
           avatarURL = "/images/avatar.png"
           # 主页显示的网站标题 (支持 HTML 格式)
-          title = ""
+          title = "Duncan Shih"
           # 主页显示的网站副标题
           subtitle = "It's a blog about some interesting ideas."
           # 是否为副标题显示打字机动画
